Different Bugfixes for match making. Too long texts now get cut.

--- a/BrettPit/Content/Styles/games.css
+++ b/BrettPit/Content/Styles/games.css
@@ -30,4 +30,7 @@ tr {
 
 .brettpit-game-name {
     font-weight: bold;
+    width: 150px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
